# hog

./: .gitignore  CMakeLists.txt  makefile  script.sh  script_old.sh
apsphog/: CMakeLists.txt
apsphog/include/: Hog.h  HogNode.h
apsphog/src/: Hog.cpp
include/: Aho-Cora.h  Aho-Corax.h  Common-Trie.h  EHOG.h  EHOGx.h  HOG-BASE.h  HOG-BCER.h  HOG-EC.h  HOG-SK.h  HOG-SSP.h  timer.h  trace.h
scripts/: run_combined.sh
src/: Aho-Cora.cpp  Aho-Corax.cpp  Common-Trie.cpp  DatasetGenerator.cpp  EHOG.cpp  EHOGx.cpp  HOG-BCER.cpp  HOG-EC.cpp  HOG-SK.cpp  HOG-SKx.cpp  HOG-SSP.cpp
tests/: testAho.cpp  testEHOG.cpp  testHOG.cpp  testHOGfromAHO.cpp  testHOGfromEHOG.cpp  testQueries.cpp
