cmake_minimum_required(VERSION 3.16.3)
project(testHOG)
set(CMAKE_CXX_STANDARD 20)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set (CMAKE_EXE_LINKER_FLAGS -ldl)

set(EXECUTABLE_OUTPUT_PATH ${testHOG_SOURCE_DIR}/bin)

include_directories(./include)
include_directories(./malloc_count)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3 -DDEBUG")

# add_executable(TEST ./tests/testHOG ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/timer.cpp ./src/HOG-BASE.cpp ./src/HOG-SSP.cpp ./src/HOG-EC.cpp ./src/HOG-SK.cpp ./src/HOG-BCER.cpp)
# target_compile_definitions(TEST PUBLIC BCER)

add_executable(AHO ./tests/testAho.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./malloc_count/malloc_count.c)
add_executable(EHOG ./tests/testHOGEHOG.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./malloc_count/malloc_count.c)
add_executable(SSPAHO ./malloc_count/malloc_count.c ./src/HOG-SSP.cpp ./tests/testHOGfromAHO.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
target_compile_definitions(SSPAHO PUBLIC SSP)
# add_executable(SKAHO ./malloc_count/malloc_count.c ./src/HOG-SK.cpp ./tests/testHOGfromAHO.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
# target_compile_definitions(SKAHO PUBLIC SK)
# add_executable(ECAHO ./malloc_count/malloc_count.c ./src/HOG-EC.cpp ./tests/testHOGfromAHO.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
# target_compile_definitions(ECAHO PUBLIC EC)
# add_executable(BCERAHO ./malloc_count/malloc_count.c ./src/HOG-BCER.cpp ./tests/testHOGfromAHO.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
# target_compile_definitions(BCERAHO PUBLIC BCER)
# add_executable(SPAHO ./malloc_count/malloc_count.c ./src/HOG-SP.cpp ./tests/testHOGSPfromAHO.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
# target_compile_definitions(SPAHO PUBLIC SP)
add_executable(SSPEHOG ./malloc_count/malloc_count.c ./src/HOG-SSP.cpp ./tests/testHOGfromEHOG.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
target_compile_definitions(SSPEHOG PUBLIC SSP)
# add_executable(SKEHOG ./malloc_count/malloc_count.c ./src/HOG-SK.cpp ./tests/testHOGfromEHOG.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
# target_compile_definitions(SKEHOG PUBLIC SK)
# add_executable(ECEHOG ./malloc_count/malloc_count.c ./src/HOG-EC.cpp ./tests/testHOGfromEHOG.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
# target_compile_definitions(ECEHOG PUBLIC EC)
# add_executable(BCEREHOG ./malloc_count/malloc_count.c ./src/HOG-BCER.cpp ./tests/testHOGfromEHOG.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
# target_compile_definitions(BCEREHOG PUBLIC BCER)
# add_executable(SPEHOG ./malloc_count/malloc_count.c ./src/HOG-SP.cpp ./tests/testHOGSPfromEHOG.cpp ./src/timer.cpp ./src/Aho-Cora.cpp ./src/EHOG.cpp ./src/HOG-BASE.cpp)
# target_compile_definitions(SPEHOG PUBLIC SP)
